fix line-height,letter-spacing, margin, padding for page: home, contact-us, about-us

--- a/assets/sass/header/_primary-menu.scss
+++ b/assets/sass/header/_primary-menu.scss
@@ -18,8 +18,7 @@ header{
               flex-direction: row;
               margin:0;
               height: 80px;
-              width: 60%;
-              font-size: 14px;
+              width: 63%;
               li {
                 margin: auto;
                 &.current-menu-item {
