--- a/assets/sass/responsive/_responsive.scss
+++ b/assets/sass/responsive/_responsive.scss
@@ -86,9 +86,13 @@ body {
               }
               .entry-header {
                 .entry-title {
+                  margin-bottom: 0px;
                   a {
                   }
                 }
+              }
+              .entry-summary{
+                margin:0px 0;
               }
             }
           }
@@ -735,6 +739,17 @@ body {
       /**404 Page**/
     }
     @media (max-width: 480px) {
+      .intro-site-container {
+        margin-left: 0;
+        margin-top: 30px;
+        .intro-title {
+          margin-bottom: 20px;
+        }
+        .intro-info {
+        }
+        .intro-detail {
+        }
+      }
       header {
         &#masthead {
           //position: fixed !important;
